--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -20,4 +20,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka
-  
+  instance: 
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
