--- a/config/zuul-dev.yml
+++ b/config/zuul-dev.yml
@@ -12,7 +12,9 @@ spring:
 server:  port: 3001
   
 eureka:  client:    service-url:      defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
-      
+  instance: 
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port} 
 #zuul使用默认配置retryable: true
 #zuul:
 #  retryable: true
